install arch scripts, shadowsocks, other configs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
+# NOTE: comments starts with a `#` cannot be used for a inline comment
 [defaults]
 inventory = hosts
-roles_path = roles  # defaults to the directory roles/ relative to the playbook file
+
+# defaults to the directory roles/ relative to the playbook file
+roles_path = roles
