the install script works

--- a/roles/install_arch/tasks/main.yml
+++ b/roles/install_arch/tasks/main.yml
@@ -3,3 +3,36 @@
 - name: check if archlinux is already installed
   fail: msg="archlinux already installed"
   when: ansible_distribution == "Archlinux"
+
+- name: double confirm
+  pause:
+     prompt: |
+      This operation will erase all data!!!
+      The target host is: "{{ inventory_hostname }}"
+
+- name: copy vps2arch script
+  copy: src=vps2arch.sh dest=/tmp/vps2arch.sh mode=0755
+
+# TODO: this script shell be divided into multiple tasks
+- name: execute vps2arch script
+  command: /tmp/vps2arch.sh
+
+# pubkey operations are copyed from archlinux infrastructure
+- name: assign pubkey list to fact
+  set_fact: pubkey_list="{{ lookup('file', playbook_dir + "/../pubkeys/" + item) }}"
+  register: pubkeys
+  vars:
+    playbook_dir: "{{ playbook_dir }}"
+  with_items: "{{ root_ssh_keys }}"
+
+- name: assign pubkey string to fact
+  set_fact: pubkey_string={{ pubkeys.results | map(attribute='ansible_facts.pubkey_list') | join('\n') }}
+
+- name: add authorized key for root
+  authorized_key: user=root key="{{ pubkey_string }}" path=/root/.ssh/authorized_keys exclusive=yes
+
+- name: change root password to a random string
+  shell: head -c 32 /dev/urandom | base64 | sed 's/^/root:/' | chpasswd
+
+- name: reboot
+  reboot:
