--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 # NOTE: comments starts with a `#` cannot be used for a inline comment
 [defaults]
 inventory = hosts
+verbosity = 1
 
 # defaults to the directory roles/ relative to the playbook file
 roles_path = roles
