ansible vault and shadowsocks config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 [defaults]
 inventory = hosts
 verbosity = 1
+vault_password_file = get_vault_pass.sh
 
 # defaults to the directory roles/ relative to the playbook file
 roles_path = roles
