--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -5,6 +5,7 @@
 
 - name: configure pacman mirror
   template: src=mirrorlist.j2 dest=/etc/pacman.d/mirrorlist owner=root group=root mode=0644
+  when: china_mirror
 
 - name: update package cache
   pacman: update_cache=yes
