--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -7,8 +7,25 @@
   template: src=mirrorlist.j2 dest=/etc/pacman.d/mirrorlist owner=root group=root mode=0644
   when: china_mirror
 
-- name: update package cache
-  pacman: update_cache=yes
+- name: add archlinuxcn repo
+  blockinfile:
+    path: /etc/pacman.conf
+    block: |
+      [archlinuxcn]
+      Server = https://repo.archlinuxcn.org/$arch
+  notify: update package cache
+
+- name: Flush handlers
+  meta: flush_handlers
+
+- name: install anchlinuxcn keyring
+  pacman:
+    name: archlinuxcn-keyring
+    state: present
+  notify: update package cache
+
+- name: Flush handlers
+  meta: flush_handlers
 
 - name: start and enable systemd-timesyncd
   service: name=systemd-timesyncd enabled=yes state=started
