add caddy and miniflux

--- a/playbooks/beijing.yml
+++ b/playbooks/beijing.yml
@@ -5,3 +5,5 @@
   roles:
     - { role: arch_common, china_mirror: yes}
     - frps
+    - { role: caddy, tags: [caddy] }
+    - { role: miniflux, tags: [miniflux] }
