fake beian and some adjustments

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 # NOTE: comments starts with a `#` cannot be used for a inline comment
 [defaults]
 inventory = hosts
-verbosity = 1
+# verbosity = 1
 vault_password_file = get_vault_pass.sh
 
 # defaults to the directory roles/ relative to the playbook file
