role: add rsshub

--- a/playbooks/beijing.yml
+++ b/playbooks/beijing.yml
@@ -8,3 +8,4 @@
     - { role: caddy, tags: [caddy] }
     - { role: miniflux, tags: [miniflux] }
     - { role: beian, tags: [beian] }
+    - rsshub
