improve performance, fix some bugs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,3 +11,8 @@ roles_path = roles
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
+
+[ssh_connection]
+# improve execution performance
+# See: https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
+pipelining = True
