some bug investigation..
a mtu related bug is fixed.
a hostname related bug is now ignored
the reboot step is not sure to work or not

--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -1,7 +1,15 @@
 ---
 
+# - name: Print all available facts
+#   ansible.builtin.debug:
+#     var: ansible_facts
+
 - name: set hostname
-  hostname: name="{{ inventory_hostname }}"
+  hostname: 
+    name: "{{ inventory_hostname }}"
+  # FIXME: this module will fail after I updated ansible to some version...
+  # Maybe it's archlinux's packaging bug..
+  ignore_errors: yes
 
 - name: configure pacman mirror
   template: src=mirrorlist.j2 dest=/etc/pacman.d/mirrorlist owner=root group=root mode=0644
@@ -54,7 +62,7 @@
 
 - name: install some tools
   pacman:
-    name: [htop, besttrace, neofetch, trash-cli]
+    name: [htop, besttrace, neofetch, trash-cli, strace]
     state: present
 
 - name: enable and start docker
