--- a/playbooks/los_angeles_2.yml
+++ b/playbooks/los_angeles_2.yml
@@ -6,3 +6,9 @@
     - arch_common
     - shadowsocks
     - caddy
+    - some_reverse_proxies
+    - role: git_mirror
+      SOURCE_URL: https://gitee.com/dragon_rider/ustcse_courses.git
+      MIRROR_URL: git@github.com:MingStudentSE/ustcse_courses.git
+      NAME: ustcse_courses
+      tags: [mirror]
