--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -7,8 +7,8 @@
 - name: set hostname
   hostname: 
     name: "{{ inventory_hostname }}"
-  # FIXME: this module will fail after I updated ansible to some version...
-  # Maybe it's archlinux's packaging bug..
+  # FIXME: A bug of ansible
+  # See: https://github.com/ansible/ansible/issues/74556
   ignore_errors: yes
 
 - name: configure pacman mirror
@@ -62,7 +62,7 @@
 
 - name: install some tools
   pacman:
-    name: [htop, besttrace, neofetch, trash-cli, strace]
+    name: [htop, besttrace, neofetch, trash-cli, strace, bind]
     state: present
 
 - name: enable and start docker
