--- a/roles/miniflux/tasks/main.yml
+++ b/roles/miniflux/tasks/main.yml
@@ -7,7 +7,10 @@
   template: src=docker-compose.yml.j2 dest=/root/miniflux/docker-compose.yml mode=0644
 
 - name: create and start service
-  docker_compose: project_src=/root/miniflux
+  docker_compose:
+    state: present
+    project_src: /root/miniflux
+    pull: true
 
 - name: add caddy config
   template: src=miniflux.caddy.j2 dest=/etc/caddy/conf.d/miniflux.caddy mode=0644
