syncthing: fix overwriting config file

--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -11,7 +11,10 @@
   template: src={{ item }}.j2 dest=/root/syncthing/{{ item }} mode=0666
   loop:
     - docker-compose.yml
-    - config/config.xml
+
+- name: copy main syncthing config
+  # the config.xml should be copyed when the destination does not exist, cause syncthing will change the config file
+  template: src=config/config.xml.j2 dest=/root/syncthing/config/config.xml mode=0666 force=no
 
 - name: copy private and public keys
   copy: src={{ item }} dest=/root/syncthing/{{ item }} mode=0644
