fail2ban: add sshd jail

--- a/roles/arch_common/handlers/main.yml
+++ b/roles/arch_common/handlers/main.yml
@@ -9,3 +9,8 @@
 
 - name: restart sshd
   service: name=sshd state=restarted
+
+- name: restart fail2ban
+  systemd:
+    name: fail2ban
+    state: restarted
