--- a/roles/dpb/tasks/main.yml
+++ b/roles/dpb/tasks/main.yml
@@ -4,7 +4,7 @@
   git:
     repo: https://github.com/cjc7373/dpb.git
     dest: "{{ project_path }}"
-    update: yes
+    update: "{{ update is defined }}"
   notify:
     reload gunicorn
   # Github operations are very likely to fail in China..
