--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,10 +7,12 @@ vault_password_file = get_vault_pass.sh
 # defaults to the directory roles/ relative to the playbook file
 roles_path = roles
 
-# Use the YAML callback plugin, to make the playbook output more human readable.
-stdout_callback = yaml
-# Use the stdout_callback when running ad-hoc commands.
-bin_ansible_callbacks = True
+# TODO: this would cause `ansible -m setup host` output nothing..
+# For now, disable it.
+# # Use the YAML callback plugin, to make the playbook output more human readable.
+# stdout_callback = yaml
+# # Use the stdout_callback when running ad-hoc commands.
+# bin_ansible_callbacks = True
 
 [ssh_connection]
 # improve execution performance
