--- a/roles/nwu.icu/tasks/main.yml
+++ b/roles/nwu.icu/tasks/main.yml
@@ -76,9 +76,9 @@
   template: src=nwu.icu.caddy.j2 dest=/etc/caddy/conf.d/nwu.icu.caddy mode=0644
   notify: reload caddy
 
-- name: add daily autoreport crontab
-  ansible.builtin.cron:
-    name: autoreport
-    minute: "5"
-    hour: "1,6,13,15"
-    job: "{{ project_path }}/report/trigger_report.sh > /root/autoreport.log 2>&1"
+# - name: add daily autoreport crontab
+#   ansible.builtin.cron:
+#     name: autoreport
+#     minute: "5"
+#     hour: "1,6,13,15"
+#     job: "{{ project_path }}/report/trigger_report.sh > /root/autoreport.log 2>&1"
