--- a/playbooks/beijing.yml
+++ b/playbooks/beijing.yml
@@ -16,3 +16,4 @@
     - role: plausible_analytics
       vars: { zone: coherence.space, domain: analytics }
       tags: [pa]
+    - { role: authelia, tags: [authelia] }
