--- a/roles/miniflux/tasks/main.yml
+++ b/roles/miniflux/tasks/main.yml
@@ -6,11 +6,20 @@
 - name: copy miniflux docker-compose.yml
   template: src=docker-compose.yml.j2 dest=/root/miniflux/docker-compose.yml mode=0644
 
+- name: pull docker image
+  command:
+    chdir: /root/miniflux
+    cmd: docker compose pull
+  when: update is defined
+  register: result
+  changed_when: '"Pulling fs layer" in result.stderr'
+
 - name: create and start service
-  docker_compose:
-    state: present
-    project_src: /root/miniflux
-    pull: "{{ update is defined }}"
+  command:
+    chdir: /root/miniflux
+    cmd: docker compose up -d
+  register: result
+  changed_when: '"Starting" in result.stderr'
 
 - name: add caddy config
   template: src=miniflux.caddy.j2 dest=/etc/caddy/conf.d/miniflux.caddy mode=0644
