--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -22,8 +22,17 @@
     - config/cert.pem
     - config/key.pem
 
+- name: pull docker image
+  command:
+    chdir: /root/syncthing
+    cmd: docker compose pull
+  when: update is defined
+  register: result
+  changed_when: '"Pulling fs layer" in result.stderr'
+
 - name: create and start service
-  docker_compose:
-    state: present
-    project_src: /root/syncthing
-    pull: "{{ update is defined }}"
+  command:
+    chdir: /root/syncthing
+    cmd: docker compose up -d
+  register: result
+  changed_when: '"Starting" in result.stderr'
