feat: monitoring stack

--- a/playbooks/hk-idc-wiki.yml
+++ b/playbooks/hk-idc-wiki.yml
@@ -5,3 +5,5 @@
   roles:
     - { role: arch_common }
     - { role: caddy, tags: [caddy] }
+    - { role: monitoring_exporter, tags: [monitoring_exporter] }
+    - { role: monitoring_server, tags: [monitoring_server] }
