gitea: update config

--- a/roles/gitea/tasks/main.yml
+++ b/roles/gitea/tasks/main.yml
@@ -4,8 +4,8 @@
   pacman: name=gitea state=present
 
 - name: copy gitea config file
-  template: src=app.ini.j2 dest=/etc/gitea/app.ini mode=0644
-  notify: reload gitea
+  template: src=app.ini.j2 dest=/etc/gitea/app.ini mode=0644 user=gitea group=gitea
+  notify: restart gitea
 
 - name: start and enable gitea
   service: name=gitea.service enabled=yes state=started
