tailscale: new role

--- a/playbooks/hk-idc-wiki.yml
+++ b/playbooks/hk-idc-wiki.yml
@@ -4,6 +4,7 @@
   hosts: hk
   roles:
     - { role: arch_common }
+    - { role: tailscale, tags: [tailscale] }
     - { role: caddy, tags: [caddy] }
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
     - { role: monitoring_server, tags: [monitoring_server] }
