deploy firewalld to all servers

--- a/playbooks/beijing.yml
+++ b/playbooks/beijing.yml
@@ -4,6 +4,7 @@
   hosts: beijing
   roles:
     - { role: arch_common, china_mirror: true}
+    - { role: tailscale, tags: [tailscale] }
     - frps
     - { role: caddy, tags: [caddy] }
     - { role: miniflux, tags: [miniflux] }
